--- a/MyAndroidFrame/res/values/messages.xml
+++ b/MyAndroidFrame/res/values/messages.xml
@@ -14,4 +14,6 @@
     <string name="http_exception_error">网络异常，请求超时</string>
     <string name="socket_exception_error">网络异常，读取数据超时</string>
     <string name="network_not_connected">网络连接失败，请检查网络设置</string>
+    
+    <string name="xml_parser_failed">数据解析异常</string>
 </resources>
