--- a/MyAndroidFrame/res/values/colors.xml
+++ b/MyAndroidFrame/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="white">#FFFFFF</color>
-    
+    <color name="window_bg">#f7f7f7</color>
+    <color name="dialog_content">#444444</color>
+    <color name="black">#464646</color>
+    <color name="gray_line">#d2d2d2</color>
+    <color name="transparent">#00000000</color>
+
 </resources>
