--- a/MyAndroidFrame/res/values/dimens.xml
+++ b/MyAndroidFrame/res/values/dimens.xml
@@ -3,5 +3,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <!-- set title font -->
+    <dimen name="title_menu_textsize">15sp</dimen>
+    <dimen name="title_center_textsize">18sp</dimen>
+    <dimen name="title_menu_padding">10dip</dimen>
+    
 
 </resources>
