--- a/MyAndroidFrame/res/layout/common_title_layout.xml
+++ b/MyAndroidFrame/res/layout/common_title_layout.xml
@@ -35,8 +35,7 @@
                 android:gravity="center"
                 android:singleLine="true"
                 android:textColor="@color/white"
-                android:textSize="@dimen/title_menu_textsize"
-                android:visibility="gone" />
+                android:textSize="@dimen/title_menu_textsize" />
         </LinearLayout>
 
         <LinearLayout
