--- a/MyAndroidFrame/res/values/messages.xml
+++ b/MyAndroidFrame/res/values/messages.xml
@@ -9,9 +9,11 @@
     <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
     <string name="submit_report">提交报告</string>
     
-    <!-- http message -->
+    <!-- http handler message -->
     <string name="http_exception_error">网络异常，连接超时。</string>
     <string name="network_not_connected">网络连接失败，请检查网络设置</string>
-    
+	<string name="server_exception_error" formatted="false">%s，错误码：%d</string>    
     <string name="xml_parser_failed">数据解析异常</string>
+    <!-- loading data -->
+    <string name="loading_data">努力加载中，请稍后...</string>
 </resources>
